RESOLVED FIXED45098
Web Inspector: Timeline instrumentation code can crash browser.
https://bugs.webkit.org/show_bug.cgi?id=45098
Summary Web Inspector: Timeline instrumentation code can crash browser.
Ilya Tikhonovsky
Reported 2010-09-02 03:21:08 PDT
sample url: http://vkontakte.ru/gsearch.php?section=audio&c[q]=Billy's%20Band 1) load the site 2) open inspector 3) start timeline recording 4) reload inspected page got NPE
Attachments
[patch] initial version. (3.05 KB, patch)
2010-09-02 03:31 PDT, Ilya Tikhonovsky
no flags
Ilya Tikhonovsky
Comment 1 2010-09-02 03:31:44 PDT
Created attachment 66346 [details] [patch] initial version.
Yury Semikhatsky
Comment 2 2010-09-02 03:35:26 PDT
Comment on attachment 66346 [details] [patch] initial version. Would be nice to have a test for this.
WebKit Commit Bot
Comment 3 2010-09-02 10:11:03 PDT
Comment on attachment 66346 [details] [patch] initial version. Clearing flags on attachment: 66346 Committed r66674: <http://trac.webkit.org/changeset/66674>
WebKit Commit Bot
Comment 4 2010-09-02 10:11:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.