2010-09-02  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Yury Semikhatsky.

        WebInspector: Timeline instrumentation code can crash browser.

        Steps:
        1) load the site
        2) open inspector
        3) start timeline recording
        4) reload inspected page
        got NPE

        https://bugs.webkit.org/show_bug.cgi?id=45098

        * loader/ResourceLoader.cpp:
        (WebCore::ResourceLoader::didReceiveResponse):
        (WebCore::ResourceLoader::didReceiveData):

Canonical link: https://commits.webkit.org/57433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66674 268f45cc-cd09-0410-ab3c-d52691b4dbfc